Adding owners page and controller. Close #13

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Pet Clinic Index</title>
 </head>
 <body>
-    <h1 th:text="'Index Page'">Insert Index Page</h1> // replace Insert Index Page with "Index Page"
+    <!--replace Insert Index Page with "Index Page"-->
+    <h1 th:text="'Index Page'">Insert Index Page</h1> //
 </body>
 </html>
