--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,7 +5,23 @@
     <title>List of Vets</title>
 </head>
 <body>
+<!--/*@thymesVar id="vet" type="by9ye.springframework.petclinic.model.Vet"*/-->
     <h1 th:text="'List of Vets'">List of Vets..</h1>
-
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet.id}">id</td>
+            <td th:text="${vet.firstName}">vet firstName</td>
+            <td th:text="${vet.lastName}">vet last Name</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
